// Vitest Snapshot v1

exports[`ListContainer > should render all the items 1`] = `
<div>
  <ul
    class=""
  >
    <li
      class="root gutters css-1aiu9eb-StyledListItem e180q0291"
      role="option"
    >
      Item 1
    </li>
    <li
      class="root gutters css-1aiu9eb-StyledListItem e180q0291"
      role="option"
    >
      Item 2
    </li>
    <li
      class="root gutters css-1aiu9eb-StyledListItem e180q0291"
      role="option"
    >
      Item 3
    </li>
  </ul>
</div>
`;

exports[`ListContainer > should render correctly 1`] = `
<div>
  <ul
    class=""
  />
</div>
`;
